melhorias no flow

--- a/flow.html
+++ b/flow.html
@@ -130,7 +130,7 @@
 	<div class="container">
 	                    
 
-	                    <div class="row"  id="amostrasPic">
+	                    <div style="display: none;" class="row"  id="amostrasPic">
 	                        <div class="col-md-12">
 	                            <div>
 	                                <h1 id="flowTitle" style="color: #5a5c61; text-align: center;" class="flowTitle"></h1>
