--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
                     <div class="space-30"></div>
-                    <h1>@@@ Receba Amostras Grátis<br> sem sair de casa!</h1>
+                    <h1>Receba Amostras Grátis<br> sem sair de casa!!!</h1>
                     <div class="space-10"></div>
                 
                     <p>Responda as perguntas, escolha os produtos e receba em casa, é GRÁTIS!</p>
